Added post creation, indexing, view and commenting functionality

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,1 +1,43 @@
-<h4> Welcome in clarion </h4>
+<div class = "new_post_form">
+  <div class = "new_post_header">
+    <p><b>Hello <u><%= current_user.name %></u> What's on your mind<b></p>
+  </div>
+  <div class = "new_post_form_for">
+    <%= form_for @post do |f| %>
+      <div>
+        <%= f.label :title %><br>
+        <%= f.text_field :title, :placeholder => "Give a Title to your thought", :size => 25 %>
+      </div><br>
+      <div>
+        <%= f.label :content %><br>
+        <%= f.text_field :content,:placeholder => "Write your thought", :size => 25 %>
+      </div><br>
+      <div>
+        <%= f.hidden_field :user_id, :value => "current_user.id" %>
+      </div>
+      <div>
+        <%= f.submit %>
+      </div>
+    <% end %>
+  </div>
+</div>
+
+<div class = "latest_post">
+  <h4> Latest Post </h4>
+  <table>
+    <tr>
+      <th>Sr.No</th>
+      <th>Post Title</th>
+      <th>Post Author</th>
+    </tr>
+    <% @posts.each_with_index do |post, n| %>
+      <tr>
+        <td> <%= n+1 %></td>
+        <td><%= link_to post.title, post %></td>
+        <td><%= post.user.name %></td>
+      </tr>
+    <% end %>
+  </table>
+</div>
+
+
