--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -16,8 +16,26 @@
     <p><b><%= @post.content %> </b></p>
   </div>
 </div>
+
 <div class ="comment_on_post">
   <div class = "new_post_header">
     <p><b>Comment</b><p>
   </div>
+  <div class = "show_view_content">
+    <%= form_for @comment do |f| %>
+      <div>
+        <%= f.label :content %>
+        <%= f.text_field :content, :size => 20 %>
+        <%= f.hidden_field :post_id,  :value => @post.id %>
+        <%= f.hidden_field :user_id, :value => current_user.id%>
+      </div>
+      <div>
+        <%= f.submit %>
+      </div>
+    <% end %>
+  </div>
+    <% @comments.each do |comment| %><hr>
+      <%= link_to User.find(comment.user_id).name, User.find(comment.user_id) %> <span id="comment_span"><%= time_ago_in_words(comment.created_at) %> ago</span><br>
+      <%= comment.content %>
+    <% end %>
 </div>
