--- a/app/assets/stylesheets/categories.css.scss
+++ b/app/assets/stylesheets/categories.css.scss
@@ -1,3 +1,24 @@
 // Place all the styles related to the categories controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.category_index {
+  min-height:400px;
+  width:500px;
+  border: solid 2px #C0C0C0;
+}
+
+.category_type {
+  background-color:white;
+  border: solid 2px;
+  margin-top:10px;
+  height:50px;
+}
+
+.category_name {
+  float:left;
+  padding:10px;
+  width:62px;
+  margin-left:20px;
+  font-weight:bold;
+}
