--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -3,11 +3,61 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .new_post_form {
-  height:197px;
+  height:350px;
   float:left;
   margin:10px;
+  background-color:white;
+  width:400px;
+  border: solid 2px Gainsboro;
 }
 
 .latest_post {
   float:right;
+  margin-right:200px;
+}
+
+.new_post_header {
+  text-align:center;
+  background-color:#C0C0C0;
+  border:solid 1px #c3c3c3;
+}
+
+.new_post_form_for, .show_view_content {
+  background-color:white; 
+  text-align:center; 
+}
+
+.new_post_form_for {
+  height:150px;
+  padding:55px;
+}
+
+.show_view {
+  height:200px;
+  width:200px;
+  background-color:white;
+  float:left;
+  margin-left:20px;
+  margin-bottom:20px;
+}
+
+.show_view_post_content {
+  min-height:200px;
+  width:250px;
+  float:left;
+  background-color:white;
+  margin-left:100px;
+}
+
+.comment_on_post {
+  clear:both;
+  min-height:250px;
+  width:300px;
+  background-color:white;
+}
+
+#comment_span {
+  margin-left:24px;
+  font-size:12px;
+  color:red;
 }
