Added bootsy inline editor

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -13,7 +13,7 @@
     <p><b>Content</b></p>
   </div>
   <div class = "show_view_content">
-    <p><b><%= @post.content %> </b></p>
+    <p><b><%= @post.content.html_safe %> </b></p>
   </div>
 </div>
 
