--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,8 +1,3 @@
-<%= form_tag (search_users_path) do %>  
-  <%= text_field_tag :search, params[:search], placeholder: "Search" %> 
-  <%= submit_tag "Search", :name => nil %>     
-<% end %>
-
 <div class = "new_post_form">
   <div class = "new_post_header">
     <p><b>Hello <u><%= current_user.name %></u> What's on your mind<b></p>
@@ -13,10 +8,15 @@
         <%= f.label :title %><br>
         <%= f.text_field :title, :placeholder => "Give a Title to your thought", :size => 25 %>
       </div><br>
-      <div>
+      <span id ="ckeditor_span">Show Editor</span>
+      <div id = "ckeditor" style = "display:none" >
         <%= f.label :content %><br>
-        <%= f.bootsy_area :content,:placeholder => "Write your thought", :size => 25 %>
-      </div><br>
+        <%= f.cktext_area :content,:placeholder => "Write your thought", :size => 25 %>
+      </div>
+      <div id = "normal_field">
+        <%= f.label :content %><br>
+        <%= f.text_field :content,:placeholder => "Write your thought", :size => 25, disabled: false, status: "enable" %>
+      </div>
       <div>
         <%= f.hidden_field :user_id, :value => "current_user.id" %>
       </div>
