--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -2,6 +2,8 @@
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
+  <div><%= f.label :name %><br />
+  <%= f.text_field :name, autofocus: true %></div>
 
   <div><%= f.label :email %><br />
   <%= f.email_field :email, autofocus: true %></div>
@@ -17,7 +19,13 @@
     <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
 
   <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "off" %></div>
+  <%= f.password_field :current_password, autocomplete: "off" %></div>
+
+  <div><%= f.label :city %><br />
+  <%= f.text_field :city, autofocus: true %></div>
+
+  <div><%= f.label :phone_no %><br />
+  <%= f.text_field :phone_no, autofocus: true %></div>
 
   <div><%= f.submit "Update" %></div>
 <% end %>
