--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -51,12 +51,12 @@
     <% end %>
   </div>
 
-  <% @comments.each do |comment| %><hr>
+  <% @comments.each do |comment| %>
     <%= link_to User.find(comment.user_id).name, User.find(comment.user_id) %> <span id="comment_span"><%= time_ago_in_words(comment.created_at) %> ago</span><br>
     <%= comment.content %><br>
     <% if can? :manage, comment %>
       <span id = "comment_span"><%= link_to "destroy", comment_path(comment), :method => :delete %></span>
       <span id ="comment_span"> <button class = "active_button_class" id = "comment<%= comment.id %>" value = "<%= comment.id %>" table = "<%= comment.class %>" ><%=check_activation_status(comment.id, comment.class) %></button></span>
-    <% end %>
+    <% end %><hr>
   <% end %>
 </div>
