--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,31 @@
-<%= @user.name %>
-<% if can? :manage ,@user %>
-  <button id = "active_button" value = "<%= @user.id %>" table = "<%= @user.class %>" ><%=check_activation_status(@user.id, @user.class) %></button>
-<% end %>
+<center> <h3> Profile of - <%= @user.name %> </h3></center>
+<center><div class="user_show">
+  <table class = "athlete_show_table">
+    <tr>
+      <th>Name</th> 
+      <td><%= @user.name %></td>
+    </tr>
+    <tr>
+      <th>E-mail</th>
+      <td><%= @user.email %></td>
+    </tr>
+    <tr>
+      <th>City</th>
+      <td><%= @user.city %></td>
+    </tr>
+    <tr>
+      <th>Phone</th>
+      <td><%= @user.phone_no %></td>
+    </tr>
+    <% if can? :manage ,@user %>
+      <tr>
+        <th>Manage Account</th>
+        <td>
+          <button id = "active_button" value = "<%= @user.id %>" table = "<%= @user.class %>" ><%=check_activation_status(@user.id, @user.class) %></button>
+          <%= button_to "Destroy", user_path(@user), method: :delete %>
+        </td>
+      </tr>
+    <% end %>
+
+  </table>
+</div></center>
