--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -60,7 +60,8 @@ body {
 .header_flash_message {
   color:white;
   height:30px;
-  padding:10px;
+  margin-top:-19px;
+  margin-left:10px;
 }
 
 .header_link_for_controller {
@@ -76,7 +77,7 @@ body {
 }
 
 a {
-  color:CornflowerBlue;
+  color:#008A8A;
   font-weight:bold;
 }
 
@@ -93,6 +94,16 @@ a {
 
 .login_page {
   background-color:white;
-  height:400px;
-  width:500px;
+  height:300px;
+  width:300px;
+}
+
+.login_page span {
+  margin-left:30px;
+}
+
+.login_image_container {
+  float:right;
+  margin-top:-360px;
+  margin-right:40px;
 }
