--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -2,66 +2,43 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-table {border-collapse: collapse; width:100% }
-table td, th {border: 2px groove}
-th { padding: 10px; }
-td { padding: 10px; }
+table { }
+table td, th { }
+th { padding: 7px; }
+td { padding: 7px; }
 
 .new_post_form {
-  min-height:452px;
-  float:left;
-  margin:10px;
-  background-color:white;
-  width:400px;
-  border: solid 2px Gainsboro;
-  overflow:scroll;
+ width:400px;
+ text-align:center;
 }
 
 .latest_post {
-  float:right;
-  margin-right:200px;
+  width:400px;
+  min-height:153px;
+  border: solid 1px ;
+  margin-bottom:10px;
+  padding:5px;
+  background-color:#F4F4F4;
 }
 
-.new_post_header {
+.latest_post h3 {
+  margin-top:3px;
+}
+
+.post_header {
   text-align:center;
   background-color:#C0C0C0;
   border:solid 1px #c3c3c3;
+  margin-bottom:8px;
 }
 
-.new_post_form_for, .show_view_content {
-  background-color:white; 
-  text-align:center; 
-}
-
-.new_post_form_for {
-  height:150px;
-  padding:20px;
-}
-
-.show_view {
-  height:200px;
-  width:200px;
-  background-color:white;
-  float:left;
-  margin-left:20px;
-  margin-bottom:20px;
-}
-
-.show_view_post_content {
-  min-height:200px;
-  width:250px;
-  float:left;
-  background-color:white;
-  margin-left:100px;
-}
-
-.comment_on_post {
+.post_comment_container {
   clear:both;
   min-height:250px;
-  width:250px;
+  width:400px;
   background-color:white;
-  
 }
+
 
 #comment_span {
   margin-left:24px;
@@ -72,4 +49,48 @@ td { padding: 10px; }
 #ckeditor_span {
   color:DarkSlateGray;
   margin-left:235px;
+}
+
+.post_comment_count {
+  float:right;
+  color:  #CC0000;
+  font-size:12px;
+}
+
+.post_read_more {
+  float:right;
+  margin-top:21px;
+  margin-right:5px;
+  background-color:Gainsboro;
+}
+
+.post_show_admin_action {
+  float:left;
+  margin-left:129px;
+  background-color:red;
+}
+
+.post_view_container {
+  margin-left:100px;
+  float:left;
+}
+
+.post_second-container {
+  float:right;
+  margin-top:50px;
+  margin-right:200px;
+}
+
+.post_second_container_for_index {
+  float:right;
+  margin-top:123px;
+  margin-right:268px;
+}
+
+#h3_for_post_heading {
+  color:#A52A2A 
+}
+
+.comments {
+  margin-left:13px;
 }
