Added pagination functionality

--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -59,9 +59,9 @@ td { padding: 7px; }
 
 .post_read_more {
   float:right;
-  margin-top:21px;
-  margin-right:5px;
   background-color:Gainsboro;
+  margin-left:300px;
+  position:absolute;
 }
 
 .post_show_admin_action {
