--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -16,6 +16,7 @@
       </div>
     <% end %>
   <% end %>
+  <%= will_paginate @posts %>
 </div>
 
 <div class = "post_second_container_for_index">
